Fix visual bug on shift info tooltip - Fix bug on shift info tooltip that caused it to be displayed in top   right of screen if its not in use due to missing position-relative   bs class. - Update styling of info tooltip icon to appear as the base div is   hovered over. - Update colour key on employee dashboard to only be as wide as the   contents require it.

--- a/src/django/auth_app/static/css/styles.css
+++ b/src/django/auth_app/static/css/styles.css
@@ -601,3 +601,14 @@ table {
   top: 0.25rem;
   right: 0.25rem;
 }
+
+.shift-item .info-tooltip-icon {
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.2s ease;
+}
+
+.shift-item:hover .info-tooltip-icon {
+  opacity: 1;
+  pointer-events: auto;
+}
